Fix: track info overflow

--- a/client/components/Player/Player.module.css
+++ b/client/components/Player/Player.module.css
@@ -15,6 +15,11 @@
   gap: 10px;
 }
 
+.trackInfoItem {
+  overflow: hidden;
+  white-space: nowrap;
+}
+
 .artist {
   font-size: 12;
   color: gray;
